# joseki-craft-lab

./: LICENSE  README.md
.github/: project-structure.yml
.github/scripts/: create_project_structure.py
.github/workflows/: backend-ci.yml  ci.yml  frontend-ci.yml  project-setup.yml
backend/: pyproject.toml
backend/src/: main.py
backend/src/db/: crud.py  memgraph_db.py
backend/src/models/: position.py
backend/tests/: conftest.py  test_main.py
backend/tests/test_db/: test_memgraph_db.py
docker/: docker-compose.yml  memgraph.Dockerfile
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.test.tsx  App.tsx
frontend/src/components/Chessboard/: Chessboard.test.tsx  Chessboard.tsx
frontend/src/contexts/: AppContext.test.tsx  AppContext.tsx
frontend/src/pages/: About.tsx  Home.tsx
frontend/src/styles/: theme.ts
